Complete end-to-end gRPC MP test passing.
Signed-off-by: Santiago Pericas-Geertsen <santiago.pericasgeertsen@oracle.com>